# chessage

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  board.hpp  fen.cpp  fen.hpp  main.cpp  move.cpp  move.hpp
src/legalmoves/: #CMakeLists.txt#  .#CMakeLists.txt  board.cpp
tests/: CMakeLists.txt  test_board.cpp  test_fen.cpp
tests/legalmoves_tests/: CMakeLists.txt  test_board.cpp  test_fen.cpp
